crates/tofu-syntax/tests/snapshots/parser_test__parser@expression__valid__func_call.tof.snap
---
source: crates/tofu-syntax/tests/parser_test.rs
expression: pretty_output
input_file: crates/tofu-syntax/tests/cases/expression/valid/func_call.tof
---
(<set> result = (<call> foo (a, b, c)))
(<set> result = (<call> cast <<f32>> (value)))
(<set> result = (<call> create (width = (<i64> 100), height = (<i64> 200))))
