crates/tofu-syntax/tests/snapshots/parser_test__parser@expression__valid__import_math.tof.snap
---
source: crates/tofu-syntax/tests/parser_test.rs
expression: pretty_output
input_file: crates/tofu-syntax/tests/cases/expression/valid/import_math.tof
---
(<import> std::math)
