crates/tofu-syntax/tests/snapshots/parser_test__parser@expression__valid__julia_array.tof.snap
---
source: crates/tofu-syntax/tests/parser_test.rs
expression: pretty_output
input_file: crates/tofu-syntax/tests/cases/expression/valid/julia_array.tof
---
(<set> v = [(<i64> 1), (<i64> 2), (<i64> 3), (<i64> 4)])
